@startuml
!theme plain
hide circle
hide methods
hide stereotypes

entity "endereco" as Endereco {
  + id : SERIAL [PK]
  --
  estado : VARCHAR(2)
  cidade : VARCHAR(120)
  rua : VARCHAR(255)
  numero : VARCHAR(20)
  cep : VARCHAR(20)
}

entity "usuario" as Usuario {
  + id : SERIAL [PK]
  --
  nome : VARCHAR(255)
  cpf : VARCHAR(11) [UNIQUE]
  email : VARCHAR(255) [UNIQUE]
  idade : INTEGER
  telefone : VARCHAR(20)
  endereco_id : INTEGER [FK -> Endereco.id]
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "consulta" as Consulta {
  + id : SERIAL [PK]
  --
  usuario_id : INTEGER [FK -> Usuario.id]
  data_consulta : DATE
  hora_consulta : TIME
  status : consulta_status
  observacoes : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

Endereco ||--o{ Usuario : "1:N (endereco -> usuarios)"
Usuario ||--o{ Consulta : "1:N (usuario -> consultas)"
@enduml
